--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="connexion">Connexion</string>
     <string name="associer_l_appareil_l_aide_d_un_code_qr">Associer l\'appareil à l\'aide d\'un code QR</string>
     <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
