--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mot_de_passe_oublier">Mot de passe oublier ?</string>
+    <string name="phone_number">Numéro de téléphone</string>
 </resources>
